RESOLVED FIXED217123
[GTK] Chassis type check fails if the value is quoted
https://bugs.webkit.org/show_bug.cgi?id=217123
Summary [GTK] Chassis type check fails if the value is quoted
Alice Mikhaylenko
Reported 2020-09-30 02:13:32 PDT
The values in /etc/machine-info can be quoteed like `CHASSIS="handset"`. In this case the check will fail because `"handset"` isn't same as `handset`. We should unquote it.
Attachments
Patch (1.80 KB, patch)
2020-09-30 05:20 PDT, Alice Mikhaylenko
no flags
Patch (1.78 KB, patch)
2020-09-30 06:24 PDT, Alice Mikhaylenko
no flags
Alice Mikhaylenko
Comment 1 2020-09-30 05:20:52 PDT
Carlos Garcia Campos
Comment 2 2020-09-30 06:07:15 PDT
Comment on attachment 410108 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=410108&action=review > Source/WTF/wtf/glib/ChassisType.cpp:51 > + if (error.get() != nullptr) Do not compare to nullptr, and you don't need the .get() either: if (error) g_warning();
Alice Mikhaylenko
Comment 3 2020-09-30 06:24:51 PDT
Alice Mikhaylenko
Comment 4 2020-09-30 06:25:03 PDT
Sure.
EWS
Comment 5 2020-09-30 07:18:16 PDT
Committed r267789: <https://trac.webkit.org/changeset/267789> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410111 [details].
Note You need to log in before you can comment on or make changes to this bug.