[GTK] Chassis type check fails if the value is quoted https://bugs.webkit.org/show_bug.cgi?id=217123

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2020-09-30
Reviewed by Carlos Garcia Campos.

Sometimes the chassis type can be quoted, in this case we'll fail to
parse it and fall back to desktop type. Unquote the string before
attempting to parse it.

* wtf/glib/ChassisType.cpp:
(WTF::readMachineInfoChassisType):

Canonical link: https://commits.webkit.org/229910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267789 268f45cc-cd09-0410-ab3c-d52691b4dbfc